--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Weather Test</title>
-</head>
-<body>
-<h1>GitHub Pages OK!</h1>
-</body>
-</html>
+<img id="wx">
+
+<script>
+fetch("https://xxxxx.github.io/weather/weather.txt")
+  .then(r => r.text())
+  .then(b64 => {
+    document.getElementById("wx").src = b64;
+  });
+</script>
+
