Update weather data source URL in index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <img id="wx">
 
 <script>
-fetch("https://xxxxx.github.io/weather/weather.txt")
+fetch("https://mnltake.github.io/weather/weather.txt")
   .then(r => r.text())
   .then(b64 => {
     document.getElementById("wx").src = b64;
