--- a/index.html
+++ b/index.html
@@ -1,10 +1,50 @@
-<img id="wx">
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="UTF-8">
+<title>最新天気図</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+  body {
+    margin: 0;
+    background: #000;
+    color: #fff;
+    font-family: sans-serif;
+    text-align: center;
+  }
+  #weather {
+    max-width: 100%;
+    height: auto;
+  }
+  #time {
+    margin-top: 10px;
+    font-size: 14px;
+    color: #aaa;
+  }
+</style>
+</head>
+<body>
+
+<h2>最新 天気図（気象庁）</h2>
+<img id="weather" alt="weather map">
+<div id="time"></div>
 
 <script>
-fetch("https://mnltake.github.io/weather/weather.txt")
-  .then(r => r.text())
-  .then(b64 => {
-    document.getElementById("wx").src = b64;
-  });
+async function loadWeather() {
+  try {
+    const res = await fetch("weather.txt?" + Date.now());
+    const base64 = await res.text();
+
+    document.getElementById("weather").src = base64;
+    document.getElementById("time").textContent =
+      "更新: " + new Date().toLocaleString();
+  } catch (e) {
+    document.getElementById("time").textContent = "読み込み失敗";
+  }
+}
+
+loadWeather();
 </script>
 
+</body>
+</html>
