Fix image source path in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h2>最新の天気図</h2>
 
-  <img id="weather" src="../blob/main/public/weather.txt" alt="weather map" style="width:100%; max-width:800px;">
+  <img id="weather" src="../public/weather.txt" alt="weather map" style="width:100%; max-width:800px;">
 
 </body>
 </html>
