--- a/now.html
+++ b/now.html
@@ -4,6 +4,7 @@
   <title>now</title>
 </head>
 <body>
-  <img src="public/now.png" alt="now" style="max-width:100%; height:auto;">
+  <img src="public/now.png" alt="now" style="max-width:800px; width:100%; height:auto;"">
 </body>
+
 </html>
