Update image alt text in ft24.html

--- a/ft24.html
+++ b/ft24.html
@@ -4,6 +4,6 @@
   <title>future 24h</title>
 </head>
 <body>
-  <img src="public/ft24.png" alt="now" style="max-width:100%; height:auto;">
+  <img src="public/ft24.png" alt="ft24" style="max-width:100%; height:auto;">
 </body>
 </html>
