Fix HTML formatting in now.html

--- a/now.html
+++ b/now.html
@@ -4,7 +4,8 @@
   <title>now</title>
 </head>
 <body>
-  <img src="public/now.png" alt="now" style="max-width:800px; width:100%; height:auto;"">
+  <img src="public/now.png" alt="now" style="max-width:800px; width:100%; height:auto;">
 </body>
 
 </html>
+
